Fixed overflow on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -210,6 +210,7 @@ li {
 /* === Logos === */
 .logos {
   min-height: 30vh;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,140,0,1) 100%);
 }
 
 .tech-logo {
@@ -285,6 +286,7 @@ li {
 }
 
 .project-tech {
+  display: inline-block;
   padding: 7px 15px;
   margin-right: 5px;
   border: 1px solid darkorange;
@@ -323,6 +325,7 @@ li {
 /* === Social === */
 .social {
   min-height: 30vh;
+  background: linear-gradient(180deg, rgba(255,140,0,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 .social-component-icon {
@@ -341,7 +344,8 @@ li {
 /* === Footer === */
 .footer {
   padding: .25rem 0;
-  background: darkorange;
+  background: black;
+  color: white;
 
   display: flex;
   justify-content: space-around;
@@ -603,6 +607,12 @@ form small {
   }
   .code {
     right: 50px;
+  }
+  .project-tech {
+    margin-bottom: 5px;
+  }
+  .project-tech:last-child {
+    margin-bottom: 0;
   }
 
   /* === Social === */
